        * [BUGFIX]: Fixed data editing for SQL queries joining the same table several times.
        * [BUGFIX]: Fixed "Ctrl+W"/"Cmd+W" shortcut to work every time, not only every second time.
        * [BUGFIX]: Fixed order of window focusing when closing with "Ctrl+W"/"Cmd+W" shortcut.
        * [BUGFIX]: #2797 Database type is no longer disabled when adding existing database file.

[3.0.3]
        * [ADDED]: Added visual validation indicators to DbDialog, so user is informed why the "Ok" button is disabled at the moment.
        * [ADDED]: Russian translation.
        * [ADDED]: French translation.
        * [ADDED]: #2770 Added SQLite 3 version used by application in the Environment tab of the About dialog.
        * [CHANGE]: Language translations located in a separate directory have now higher precedense, than translations compiled in, so it's possible to test updated translations "on the fly".
        * [BUGFIX]: Fixed support for "function(DISTINCT args)" in Enterprise formatter.
        * [BUGFIX]: #2753 Fixed parsing TEMP and IF NOT EXISTS in CREATE TABLE statement.
        * [BUGFIX]: #2755 Fixed error checking for recurrent expression with LIKE/GLOB operator in it.
        * [BUGFIX]: Switched error message from simple method error to smart method error in QueryExecutor to avoid misleading messages.
        * [BUGFIX]: #2760 Fixed marking "unique" in index dialog when opening existing unique index.
        * [BUGFIX]: #2757 Fixed int64 rounding problem.
        * [BUGFIX]: #2767 Fixed NOT NULL dialog in column dialog, so it doesn't convert to UNIQUE.
        * [BUGFIX]: #2763 Fixed possibility of adding 2 same databases to the list.
        * [BUGFIX]: Fixed copying values from Environment tab of the About dialog.
        * [BUGFIX]: #2774 Fixed handling triggers (when modifying table) in foreign tables, triggers referencing table in its subqueries, etc.
        * [BUGFIX]: Fixed executing SELECT in SQLite2 for columns that need wrapping.