@@ -53,6 +53,7 @@ class SQLEXPORTSHARED_EXPORT SqlExport : public GenericExportPlugin
         void writeBegin();
         void writeCommit();
         void writeFkDisable();
+        void writeFkEnable();
         QString formatQuery(const QString& sql);
         QString getNameForObject(const QString& database, const QString& name, bool wrapped, Dialect dialect = Dialect::Sqlite3);
         QStringList rowToArgList(SqlResultsRowPtr row);
